<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    
    <string name="app_name">WFindGarage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索..</string>
     <string name="b1">車房搜尋</string>
     <string name="b2">附近車房</string>
     <string name="b3">提供車房資料</string>
     <string name="bb1">汽車誌</string>
          <string name="b4">聯系我們</string>
          <string name="b5">設定</string>
               <string name="b6">排行榜</string>
               <string name="b7">我的車房</string>
                    <string name="b8">推廣優惠</string>
                    <string name="b9">FACEBOOK專業</string>
                         <string name="b10">房車推廣</string>
                         <string name="b11">最新評論</string>
                              <string name="b12">汽車誌</string>
               <string name="sb1">車房搜索</string>
    <string name="t1">區域</string>                          
    <string name="t2">地區</string>                          
    <string name="t3">商店目錄</string>                          
    <string name="t4">商店類型</string>                          
    <string name="t5">關鍵字(姓名，地址，電話)</string>                          
    <string name="t6">重置</string>                          
    <string name="t7">搜索</string>
    <string name="e1">車房資料</string>                          
    <string name="e21">替代文字1</string>
    <string name="e22">替代文字2</string>
        <string name="e23">替代文字3</string>
    <string name="e3">替代文字替代文字替代文字替代文字</string>
        <string name="e4">待續</string>
            <string name="tt1">車房壹</string>
            <string name="tt2">車房基本資料</string>
            <string name="tt3">地址</string>
             <string name="tt4">替代文字替代文字</string>
             <string name="tt41">替代文字</string>
             <string name="tt5">電話</string>
             <string name="tt6">12341234</string>
             <string name="tt7">概要</string>
             <string name="ae1">車房壹</string>
             <string name="ae2">概要</string>
             <string name="ae3">評價</string>
                          <string name="ae4">相片</string>
                          <string name="ae5">DOWNLOAD</string>
         <string name="ae6">替代文字替代文字</string>
         <string name="ab1">最近消息</string>
         <string name="ab1a">車房名稱、地址、電話等.</string>
        
                  <string name="ab2">最新文章</string>
                  <string name="ab3">替代文字替代文字替代文字替代文字替代文字替代文字</string>
                  <string name="ab4">替代文字</string>
     <string name="af1">最新評論</string>
     <string name="af2">編輯推薦</string>
     <string name="af3">替代文字</string>
     <string name="af4">第1到22篇評論</string>
     <string name="af5">XX車房</string>
     <string name="af7">2015-07-03</string>
     <string name="af6">卓越車房</string>
          <string name="af8">距離排序</string>
          <string name="af9">評分排序</string>
          <string name="af11">附近車房</string>
          <string name="af12">50</string>
          <string name="af13">8</string>
          <string name="af14">180m</string>
          <string name="ad1">FIND GARAGE帳戶登入</string>
          <string name="ad2">Facebook登入</string>
          <string name="ad3">Google登入</string>
          <string name="ad4">地區及語言(Language)</string>
          <string name="ad41">有關說明</string>
          <string name="ad5">有關我們</string>
          <string name="ad6">贊好FIND GARAGE專頁</string>
          <string name="ad7">聯絡我們</string>
          <string name="ad8">每月排行</string>
          <string name="za1">會員登入</string>
          <string name="za1a">會員登記</string>
          <string name="za2">登入</string>
          <string name="za3">登記</string>
          <string name="za4">電郵/會員名稱</string>
          <string name="za5">密碼</string>
          <string name="za6">忘記密碼</string>
          <string name="za7">以社交網絡登入</string>
          
          <string name="az1">登入電郵</string>
          <string name="az2">用作登入及接收確認電郵</string>
          <string name="az3">稱謂</string>
          <string name="az4">請選擇</string>
          <string name="az5">會員名稱</string>
          <string name="az6">2至18個字，必須包含最少壹個中文字/英文字母</string>
          <string name="az7">登入名</string>
          <string name="az8">必須確認</string>
          <string name="az9">密碼</string>
          <string name="az11">6至20個字符</string>
          <string name="az12">出生年份</string>
          <string name="az13">請選擇</string>
          <string name="az14">替代文字替代文字替代文字替代文字替代文字替代文字替代文字替代文字替代文字替代文字替代文字替代文字</string>
          <string name="az15">按以上登記鍵即代表妳願意接受FIND GARAGE之隱私權限聲明及使用條款細則所約束</string>
          <string name="az16">----------------------------------------------------------------------------</string>
          
     <string name="bz1">聯絡我們</string>
     <string name="bz2">你的名稱</string>
          <string name="bz3">momo520</string>
          <string name="bz4">你的電郵</string>
               <string name="bz5">momo@imymedia.com</string>
               <string name="bz6">訊息類別</string>
                    <string name="bz7">提交意見</string>
                    <string name="bz71">提交</string>
                    <string name="bz8">內容</string>
                    <string name="bz9">告訴我們妳的意見/查詢</string>
 <string name="bz11">推廣優惠</string>
 <string name="bz12">優惠券</string>
 <string name="bz13">現金券</string>
 <string name="bz14">第1至20項(共XX項優惠)</string>
 <string name="bz15">85折優惠券</string>
 <string name="bz16">替代文字</string>
 <string name="bz17">2015-8-6</string>
 <string name="bz18">網上訂車房</string>
 
<string name="bz21">推廣優惠</string>
<string name="bz22">優惠及條款</string>
<string name="bz23">我的優惠</string>
<string name="bz231">我的收藏</string>
<string name="bz2311">收藏</string>
<string name="bz24">3</string>
<string name="bc1">車房</string>
<string name="bc2">車房名稱</string>
<string name="bc3">車牌號</string>
<string name="bc4">車輛詳情</string>
<string name="bc5">評論標題*</string>
<string name="bc6">輸入標題</string>
<string name="bc7">尋車房途徑*</string>
<string name="bc8">內容*</string>
<string name="bc9">評分*</string>
<string name="bc11">為這車房評分</string>
<string name="bc12">用戶推介</string>
<string name="bc13">有什麽車房值得推介</string>
<string name="bc14">更多資料</string>
<string name="test">adasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefawadasdfadsfawefaw</string>
<string name="abc21">首页</string>
<string name="abc22">分类</string>
<string name="abc23">展会</string>
<string name="abc24">计数器</string>
<string name="abc25">翻译</string>
<string name="abc26">我的通讯</string>
<string name="abc27">My Trade</string>
<string name="abc31">请先选择上面的地区</string>
<string name="abc32">暫無相關內容</string>
<string name="abc33">搜索结果</string>
<string name="abc34">请输入用户名</string>
<string name="abc35">请输入密码</string>
<string name="abc36">登录失败，请重登录</string>
<string name="abc37">登录成功</string>
<string name="abc41">请输入登入电邮</string>
<string name="abc42">请输入姓名</string>
<string name="abc43">请输入密码</string>
<string name="abc44">註冊成功</string>
<string name="abca1">分享</string>
<string name="abca2">收藏</string>
<string name="abca3">寫評論</string>
<string name="abca4">提供新照片</string>
<string name="abca2a">收藏成功</string>
<string name="abca2b">完成</string>
<string name="abca2c">評分</string>
<string name="abca2c1">品質</string>
<string name="abca2c2">環境</string>
<string name="abca2c3">服務</string>
<string name="abca2c4">周邊</string>
<string name="abca2c5">註銷</string>


<string name="ze1">評論</string>
<string name="ze2">評分*</string>
<string name="ze3">請填寫內容</string>
<string name="ze4">請填寫車房途徑</string>
<string name="ze5">常用分類</string>
<string name="ze6">分類</string>
<string name="ze7">主頁</string>
<string name="ze8">贊FACEBOOK專業</string>
<string name="ze9">我的FindGarage</string>
<string name="ze11">請輸入名稱</string>
<string name="ze12">請輸入電郵</string>
<string name="ze13">請輸入名稱</string>
<string name="ze14">請輸入內容</string>

<string name="ze15">評論內容</string>
<string name="ze16">評論標題</string>
<string name="ze17">請輸入評論標題</string>
<string name="ze18">請輸入評論內容</string>
<string name="ze19">添加圖片</string>
<string name="ze21">請輸入評論評分</string>

<string name="ze20">最多上傳三張圖片，可點擊刪除已選擇的圖片！</string>
<string name="ze22">請輸入車房名稱</string>
<string name="ze23">請輸入車房內容</string>
<string name="ze24">車房內容</string>

        <string name="ze25">再按一次退出程序</string>
        <string name="ze26">正在上传，请稍后..</string>
        <string name="ze27">评论图片</string>
        <string name="ze28">请输入评论内容</string>
<string name="y1">评论详情</string>
<string name="y2">评论标题</string>
<string name="y3">评论内容</string>
    <string name="search33">搜索</string>

</resources>
