<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/myradio2"
 >
 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/myloginb"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/az1"
         />
     <EditText 
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:textSize="13sp"
         android:background="@null"
         android:paddingRight="4dp"
         android:layout_gravity="center_vertical"
         android:gravity="right"
         android:layout_height="wrap_content"
         android:hint="@string/az2"
         />
 </LinearLayout>
 <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
    <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/myloginb"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/az3"
         />
          <TextView 
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:layout_height="wrap_content"
          android:gravity="right"
         android:textSize="13sp"
         android:paddingRight="20dp"
         android:textColor="@color/black"
         android:id="@+id/mTvreg1"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/az4"
         />
 </LinearLayout>
  <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
  <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/myloginb"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/az5"
         />
     <EditText 
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:textSize="13sp"
         android:background="@null"
         android:paddingRight="4dp"
         android:layout_gravity="center_vertical"
         android:gravity="right"
         android:layout_height="wrap_content"
         android:hint="@string/az6"
         />
 </LinearLayout>  
    <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
    <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/myloginb"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/az7"
         />
     <EditText 
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:textSize="13sp"
         android:background="@null"
         android:paddingRight="4dp"
         android:layout_gravity="center_vertical"
         android:gravity="right"
         android:layout_height="wrap_content"
         android:hint="@string/az8"
         />
 </LinearLayout>
     <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
        <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/myloginb"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/az9"
         />
     <EditText 
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:textSize="13sp"
         android:background="@null"
         android:paddingRight="4dp"
         android:layout_gravity="center_vertical"
         android:gravity="right"
         android:inputType="textPassword"
         android:layout_height="wrap_content"
         android:hint="@string/az11"
         />
 </LinearLayout>
          <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
        <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/myloginb"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/az12"
         />
          <TextView 
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:layout_height="wrap_content"
          android:gravity="right"
         android:textSize="13sp"
         android:id="@+id/mTvreg2"
         android:paddingRight="20dp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/az13"
         />
 </LinearLayout>
    
            <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     >
          <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:text="@string/za3"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                   android:layout_below="@id/mLL1"
                    android:id="@+id/ui_login_btn"
                    android:background="@color/myradio1"
                    />
 </RelativeLayout>
                  <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     >
          <TextView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="13sp"
         android:layout_margin="5dp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:text="@string/az15"
         />
 </RelativeLayout>
                  <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="20dp"
   android:layout_marginLeft="5dp"
   android:layout_marginRight="5dp"
                      android:visibility="gone"
   
     >
          <TextView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:textColor="@color/white"
         android:layout_gravity="center"
         android:text="@string/az16"
         />
 </RelativeLayout>
                            <TextView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="13sp"
         android:textColor="@color/black"
                            android:visibility="gone"
         
         android:gravity="center"
         android:text="@string/za7"
         />
                  
         <LinearLayout 
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                      android:layout_marginLeft="5dp"
   android:layout_marginRight="5dp"
                      android:visibility="gone"
   
                   
                   >
                   <ImageView 
                       android:layout_weight="1"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:src="@drawable/za2"
                       android:layout_marginRight="5dp"
                       />
                   <ImageView 
                       android:layout_marginLeft="5dp"
                       android:layout_weight="1"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:src="@drawable/za3"
                       />
                   </LinearLayout>          
</LinearLayout>
</ScrollView>
