
    <RelativeLayout 
        android:layout_width="fill_parent"
         xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="fill_parent"
             android:background="@color/myloginb"
        
        >

        ds<LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
                    android:layout_marginTop="40dp"
            
            >
  <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
             
             
             <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="18dp"
     android:paddingBottom="18dp"
     
     android:id="@+id/mWhatbad"
     android:background="@color/myloginb"
     >
     <EditText 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:lines="5"
         android:textColor="@color/black"
         android:id="@+id/mEd1d"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:hint="@string/ze18"
         />


 </LinearLayout>
 
  <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
             
             <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="18dp"
     android:paddingBottom="18dp"
     android:visibility="gone"
     android:background="@color/myloginb"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1.3"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/bc9"
         />
     <EditText 
         android:layout_width="0dp"
         android:layout_weight="2"
         android:textSize="13sp"
         
         android:paddingRight="4dp"
         android:layout_gravity="center_vertical"
         android:gravity="right"
                  android:textColor="@color/black"
         
         android:layout_height="wrap_content"
         android:hint="@string/bc11"
         />
 </LinearLayout>
  <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
             
 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="18dp"
     android:paddingBottom="18dp"
     android:id="@+id/mLLwhat1"
     android:background="@color/myloginb"
     >
     <RelativeLayout 
         android:layout_width="fill_parent"
         android:layout_weight="0.6"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="12dp"
         android:text="@string/ze19"
         >
                 <ImageView
                android:id="@+id/camera"
         android:layout_width="80dp"
         android:scaleType="fitXY"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                
               android:layout_alignParentRight="true"
                android:background="@drawable/aaa" >
            </ImageView>

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:text="@string/ze27"
                     android:textColor="@color/black"
                     android:textSize="21sp" />

     </RelativeLayout>
 </LinearLayout>
             <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@color/myloginb"
     android:layout_margin="5dp"
     >  
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:text="@string/bz71"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:id="@+id/ui_login_btn"
                    android:background="@color/myradio2"
                    />     
                          
                  </RelativeLayout>     
                 
     </LinearLayout>
        
        
        <RelativeLayout 
            android:id="@+id/mRlNn3"
    android:layout_width="fill_parent"
    android:layout_height="55dp"
    android:layout_alignParentBottom="true"
    android:visibility="gone"
    android:background="@drawable/ab8"
    >
    
 
</RelativeLayout>


<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="@drawable/ab8"
    >
         <ImageView
       android:layout_width="34dp"
        android:layout_height="34dp"
        android:id="@+id/mIvtt1"
         android:src="@drawable/ee1"
         android:layout_centerVertical="true"
         android:paddingLeft="5dp"
             />
        <ImageView
       android:layout_width="34dp"
        android:layout_height="34dp"
         android:src="@drawable/bd1"
         android:paddingRight="5dp"
         android:layout_centerVertical="true"
         android:visibility="gone"
         android:layout_alignParentRight="true"
       android:id="@+id/mIv12"
             />
        <TextView 
                    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:id="@+id/mTv12"
android:layout_centerVertical="true"            android:text="@string/ze15"
            android:textColor="@color/white"
            />
    </RelativeLayout>

</RelativeLayout>